cambios agregamos sitio twitch

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Que mas pues bb </title>
 </head>
 <body>
-    sigo aqui pensando en que en que rico en que rico fue
+   como seria ,como es
+   
 </body>
 </html> 
